--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,10 @@
 $smaltblue: #518581;
+$black: #151411;
+
+@mixin container {
+  padding: 0 calc(50% - 620px);
+
+  @media (max-width: 1240px) {
+    padding: 0 calc(50% - 187.5px);
+  }
+}
