--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -1,5 +1,9 @@
 @import "@styles/variables.scss";
 
-.container {
-  @include container;
+.wrapper {
+  height: 100%;
+}
+
+.content {
+  @include container(100px);
 }
