--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -1,5 +1,41 @@
 @import "@styles/variables.scss";
 
-.wrapped {
-  @include container;
+.products {
+  display: flex;
+  flex-direction: column;
+
+  &__title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 80px;
+    gap: 20px;
+
+    h1 {
+      @include text(700, 64px, 130%);
+      text-align: center;
+
+      @media (max-width: 1240px) {
+        @include text(700, 26px, 130%);
+      }
+    }
+
+    p {
+      @include text(500, 18px, 180%, $paragraph-color);
+      text-align: center;
+      width: 600px;
+
+      @media (max-width: 1240px) {
+        @include text(500, 14px, 180%, $paragraph-color);
+        width: 100%;
+      }
+    }
+  }
+
+  &__panel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 29px;
+  }
 }
