--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,25 +1,23 @@
+@import "@styles/variables.scss";
+
 .input {
+  @include text(500, 18px, 180%, $paragraph-color);
+
   filter: drop-shadow(0px 4px 120px rgba(175, 173, 181, 0.15));
   box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 18px;
   width: 300px;
   height: 84px;
   padding-left: 29px;
-  background-color: #ffffff;
-  color: #afadb5;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 180%;
   border: none;
+  outline: none;
+
+  @media (max-width: 1240px) {
+    height: 54px;
+  }
 
   &:focus {
-    box-sizing: border-box;
-    border: 1px solid #518581;
+    border: 1px solid $smaltblue;
   }
 
   &_disabled {
