--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -10,6 +10,7 @@
 
     width: 1021px;
     padding-left: 75px;
+    padding-right: 1px;
 
     @media (max-width: 1240px) {
       background-position-x: 14px;
