--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,4 +1,13 @@
 .filter {
+  box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  background-color: white;
+  height: 84px;
+  width: 190px;
+
   @media (max-width: 1240px) {
     display: none;
   }
