--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -13,7 +13,9 @@
   outline: none;
 
   @media (max-width: 1240px) {
+    font-size: 14px;
     height: 54px;
+    box-shadow: 0px 4px 80px rgba(175, 173, 181, 0.2);
   }
 
   &:focus {
