--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -1,5 +1,4 @@
 .loader {
-  border-color: #518581;
   border-style: solid;
   border-bottom-color: transparent;
   border-radius: 50%;
@@ -7,19 +6,19 @@
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
 
-  &_size-l {
+  &_l {
     border-width: 6px;
     width: 60px;
     height: 60px;
   }
 
-  &_size-m {
+  &_m {
     border-width: 4.5px;
     width: 40px;
     height: 40px;
   }
 
-  &_size-s {
+  &_s {
     border-width: 3px;
     width: 20px;
     height: 20px;
