--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -16,7 +16,7 @@
       text-align: center;
 
       @media (max-width: 1240px) {
-        @include text(700, 26px, 130%);
+        font-size: 26px;
       }
     }
 
@@ -26,7 +26,7 @@
       width: 600px;
 
       @media (max-width: 1240px) {
-        @include text(500, 14px, 180%, $paragraph-color);
+        font-size: 14px;
         width: 100%;
       }
     }
@@ -36,6 +36,5 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 29px;
   }
 }
