--- a/src/components/Header/components/MenuButton/MenuButton.module.scss
+++ b/src/components/Header/components/MenuButton/MenuButton.module.scss
@@ -1,47 +1,88 @@
-.burger {
-  height: 20px;
+@import "@styles/variables.scss";
+
+.menu,
+.menu__popup {
+  filter: drop-shadow(0px 4px 120px rgba(175, 173, 181, 0.15));
+  box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
+}
+
+.menu {
   position: relative;
-  width: 30px;
-}
+  display: none;
 
-.burger_line {
-  display: flex;
-  width: 30px;
-  height: 2px;
-  background: #d70026;
-  transition: 0.3s all ease;
-}
+  @media (max-width: 1240px) {
+    display: block;
+  }
 
-.top_line {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
+  &__popup {
+    position: absolute;
+    top: 25px;
+    right: 0;
+  }
 
-.mid_line {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translate(0, -50%);
-}
+  &__link,
+  &__link_active {
+    width: 100px;
+    height: 38px;
+    @include text(400, 14px, 16px);
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.bottom_line {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
+  &__link_active {
+    color: $smaltblue;
+  }
 
-.burger.open > .top-line {
-  transform: translateY(8px) rotate(45deg);
-  transition: 0.3s all ease;
-}
+  &__button,
+  &__button_open {
+    height: 20px;
+    position: relative;
+    width: 22.5px;
 
-.burger.open > .mid-line {
-  opacity: 0;
-  transition: 0.3s all ease;
-}
+    span {
+      width: 100%;
+      height: 2px;
+      background: #151411;
+      transition: 0.3s all ease;
+      border-radius: 2px;
 
-.burger.open > .bottom-line {
-  transform: translateY(-10px) rotate(-45deg);
-  transition: 0.3s all ease;
+      &:nth-child(1) {
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+
+      &:nth-child(2) {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translate(0, -50%);
+      }
+
+      &:nth-child(3) {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+      }
+    }
+  }
+
+  &__button_open {
+    span {
+      &:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+        transition: 0.3s all ease;
+      }
+      &:nth-child(2) {
+        opacity: 0;
+        transition: 0.3s all ease;
+      }
+      &:nth-child(3) {
+        transform: translateY(-10px) rotate(-45deg);
+        transition: 0.3s all ease;
+      }
+    }
+  }
 }
