--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   &__input {
-    background-image: url("../../assets/search-icon.svg");
+    background-image: url("../../assets/images/search-icon.svg");
     background-repeat: no-repeat;
     background-position-y: center;
     background-position-x: 25px;
