--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -37,4 +37,47 @@
     flex-direction: row;
     justify-content: space-between;
   }
+
+  &__total {
+    padding: 50px 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    @media (max-width: 1240px) {
+      gap: 8px;
+    }
+
+    h2 {
+      @include text(700, 44px, 130%);
+
+      @media (max-width: 1240px) {
+        font-size: 18px;
+      }
+    }
+
+    span {
+      @include text(700, 16px, 130%);
+      padding: 4.5px 16px;
+      color: $smaltblue;
+      background-color: #f9f9f9;
+      border-radius: 20px;
+
+      @media (max-width: 1240px) {
+        font-size: 12px;
+        padding: 2px 10px;
+        background-color: #f3f3f3;
+      }
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px 29px;
+
+    @media (max-width: 1240px) {
+      gap: 17px 15px;
+    }
+  }
 }
