product detail description start

--- a/src/components/Rating/Rating.module.scss
+++ b/src/components/Rating/Rating.module.scss
@@ -1,4 +1,14 @@
 .rating {
   display: flex;
   align-items: center;
+
+  &__star {
+    &_on {
+      color: #ffb800;
+    }
+
+    &_off {
+      color: #ccc;
+    }
+  }
 }
