DECOMPOSITION AND FIX

--- a/src/App/layouts/MainLayout/MainLayout.module.scss
+++ b/src/App/layouts/MainLayout/MainLayout.module.scss
@@ -6,4 +6,9 @@
 
 .content {
   @include container(100px);
+  padding-bottom: 54px;
+
+  @media (max-width: 1240px) {
+    padding-bottom: 38px;
+  }
 }
