--- a/src/App/pages/Products/Products.module.scss
+++ b/src/App/pages/Products/Products.module.scss
@@ -4,30 +4,32 @@
   display: flex;
   flex-direction: column;
 
-  &__title {
+  &__head {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-bottom: 80px;
     gap: 20px;
 
-    h1 {
-      @include text(700, 64px, 130%);
-      text-align: center;
+    .head {
+      &__title {
+        @include text(700, 64px, 130%);
+        text-align: center;
 
-      @media (max-width: 1240px) {
-        font-size: 26px;
+        @media (max-width: 1240px) {
+          font-size: 26px;
+        }
       }
-    }
 
-    p {
-      @include text(500, 18px, 180%, $paragraph-color);
-      text-align: center;
-      width: 600px;
+      &__info {
+        @include text(500, 18px, 180%, $paragraph-color);
+        text-align: center;
+        width: 600px;
 
-      @media (max-width: 1240px) {
-        font-size: 14px;
-        width: 100%;
+        @media (max-width: 1240px) {
+          font-size: 14px;
+          width: 100%;
+        }
       }
     }
   }
@@ -48,12 +50,24 @@
       gap: 8px;
     }
 
-    h2 {
-      @include text(700, 44px, 130%);
+    .total {
+      &__title {
+        @include text(700, 44px, 130%);
 
-      @media (max-width: 1240px) {
-        font-size: 18px;
+        @media (max-width: 1240px) {
+          font-size: 18px;
+        }
       }
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px 28px;
+
+    @media (max-width: 1240px) {
+      gap: 16px;
     }
   }
 }
