--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   gap: 12px;
-  background-color: $color-controller-bg;
+  background-color: $color-screen;
   height: 84px;
   width: 190px;
 
