--- a/src/App/layouts/MainLayout/components/Header/components/MenuButton/MenuButton.module.scss
+++ b/src/App/layouts/MainLayout/components/Header/components/MenuButton/MenuButton.module.scss
@@ -1,7 +1,5 @@
 @import "@styles/variables.scss";
 
-$color-line: #151411;
-
 .menu,
 .menu__popup {
   filter: drop-shadow(0px 4px 120px rgba(175, 173, 181, 0.15));
@@ -27,7 +25,7 @@ $color-line: #151411;
     width: 100px;
     height: 38px;
     @include text(400, 14px, 16px);
-    background-color: $color-controller-bg;
+    background-color: $color-screen;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +44,7 @@ $color-line: #151411;
     .line {
       width: 100%;
       height: 2px;
-      background: $color-line;
+      background: $text-color;
       transition: 0.3s all ease;
       border-radius: 2px;
 
