--- a/src/App/layouts/MainLayout/components/Header/Header.module.scss
+++ b/src/App/layouts/MainLayout/components/Header/Header.module.scss
@@ -1,7 +1,5 @@
 @import "@styles/variables.scss";
 
-$color-border-bottom: #f3f3f3;
-
 .header {
   @include container;
   display: flex;
@@ -9,7 +7,7 @@ $color-border-bottom: #f3f3f3;
   align-items: center;
 
   height: 120px;
-  border-bottom: 1px solid $color-border-bottom;
+  border-bottom: 1px solid $color-line;
 
   &__logoTitle {
     display: flex;
@@ -18,7 +16,7 @@ $color-border-bottom: #f3f3f3;
     gap: 12px;
 
     @media (max-width: 1240px) {
-      gap: 9px;
+      gap: 10px;
     }
   }
 
@@ -57,10 +55,10 @@ $color-border-bottom: #f3f3f3;
       display: flex;
       align-items: center;
       height: 100%;
-      border-bottom: 3px solid $smaltblue;
+      border-bottom: 2px solid $color-main;
 
       &:visited {
-        color: $text-color;
+        color: $color-text;
       }
     }
   }
