--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -32,7 +32,7 @@
   }
 
   &__category {
-    @include text(700, 18px, 130%, $paragraph-color);
+    @include text(700, 18px, 130%, $color-paragraph);
 
     @media (max-width: 1240px) {
       font-size: 12px;
@@ -50,7 +50,7 @@
   }
 
   &__subtitle {
-    @include text(500, 18px, 180%, $paragraph-color);
+    @include text(500, 18px, 180%, $color-paragraph);
 
     @media (max-width: 1240px) {
       font-size: 12px;
