--- a/src/components/Counter/Counter.module.scss
+++ b/src/components/Counter/Counter.module.scss
@@ -3,13 +3,13 @@
 .counter {
   @include text(700, 16px, 130%);
   padding: 4.5px 16px;
-  color: $smaltblue;
-  background-color: #f9f9f9;
+  color: $color-main;
+  background-color: $color-placeholder;
   border-radius: 20px;
 
   @media (max-width: 1240px) {
     font-size: 12px;
     padding: 2px 10px;
-    background-color: #f3f3f3;
+    background-color: $color-line;
   }
 }
