--- a/src/components/MultiDropdown/MultiDropdown.scss
+++ b/src/components/MultiDropdown/MultiDropdown.scss
@@ -1,7 +1,9 @@
+@import "@styles/variables.scss";
+
 .dropdown,
 .dropdown__popup {
-  filter: drop-shadow(0px 4px 120px rgba(175, 173, 181, 0.15));
-  box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
+  filter: drop-shadow(0px 4px 120px $color-box-shadow);
+  box-shadow: 0px 4px 120px $color-box-shadow;
 }
 
 .dropdown {
@@ -23,12 +25,12 @@
     gap: 12px;
     flex-direction: row;
     border: none;
-    background-color: #ffffff;
+    background-color: $color-screen;
     font-size: 18px;
     line-height: 180%;
 
     &:hover {
-      border: 1px solid #518581;
+      border: 1px solid $color-main;
     }
 
     &_disabled {
@@ -51,7 +53,7 @@
     line-height: 16px;
 
     &_active {
-      color: #518581;
+      color: $color-main;
     }
   }
 }
