--- a/src/App/pages/ProductDetailPage/ProductDetailPage.module.scss
+++ b/src/App/pages/ProductDetailPage/ProductDetailPage.module.scss
@@ -3,10 +3,11 @@
 .product {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: row;
   gap: 50px;
 
   @media (max-width: 1240px) {
+    flex-direction: column;
     gap: 30px;
   }
 
@@ -16,8 +17,8 @@
     max-height: 600px;
 
     @media (max-width: 1240px) {
-      max-width: 327px;
-      max-height: 327px;
+      max-width: 100%;
+      max-height: 326px;
     }
   }
 
@@ -25,12 +26,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    max-width: 590px;
+    max-width: 100%;
     padding-top: 2px;
-
-    @media (max-width: 1240px) {
-      max-width: 327px;
-    }
   }
 
   &__title {
