--- a/src/App/pages/ProductsPage/ProductsPage.module.scss
+++ b/src/App/pages/ProductsPage/ProductsPage.module.scss
@@ -1,9 +1,37 @@
 @import "@styles/variables.scss";
 
 .products {
-  &__content {
+  display: flex;
+  flex-direction: column;
+
+  &__head {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding-bottom: 80px;
+    gap: 20px;
+
+    .head {
+      &__title {
+        @include text(700, 64px, 130%);
+        text-align: center;
+
+        @media (max-width: 1240px) {
+          font-size: 26px;
+        }
+      }
+
+      &__info {
+        @include text(500, 18px, 180%, $color-paragraph);
+        text-align: center;
+        width: 600px;
+
+        @media (max-width: 1240px) {
+          font-size: 14px;
+          width: 100%;
+        }
+      }
+    }
   }
 
   &__panel {
