--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -15,16 +15,16 @@
 
   &__image {
     margin: auto;
-    max-width: 394px;
+    max-width: 100%;
     max-height: 360px;
 
     @media (max-width: 1240px) {
-      max-width: 156px;
       max-height: 130px;
     }
   }
 
   &__description {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -42,7 +42,11 @@
 
   &__title {
     @include text(700, 26px, 130%);
+    max-width: 100%;
     letter-spacing: 0.01em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @media (max-width: 1240px) {
       font-size: 14px;
