--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,7 +1,7 @@
 @import "@styles/variables.scss";
 
 .filter {
-  box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
+  box-shadow: 0px 4px 120px $color-box-shadow;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,5 +12,9 @@
 
   @media (max-width: 1240px) {
     display: none;
+  }
+
+  &__title {
+    @include text(500, 18px, 180%);
   }
 }
